--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -25,6 +25,10 @@
         <!-- Libros -->
         <script src="src/modules/libros/libros.mod.js" type="text/javascript"></script>
         <script src="src/modules/libros/libros.ctrl.js" type="text/javascript"></script>
+        
+        <!-- Autores -->
+        <script src="src/modules/autores/autores.mod.js" type="text/javascript"></script>
+        <script src="src/modules/autores/autores.ctrl.js" type="text/javascript"></script>
 
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script>
@@ -62,6 +66,8 @@
                                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filtrar <span class="caret"></span></button>
                                             <ul class="dropdown-menu">
                                                 <li><a ui-sref="librosList" id="libros">Libros</a></li>
+                                                <li><a ui-sref="autoresList" id="libros">Autores</a></li>
+                                                <li><a ui-sref="#" id="libros">Áreas de Conocimiento</a></li>
                                                 <li><a href="#">Editorial</a></li>
                                             </ul>
                                         </div><!-- /btn-group -->
