--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -5,9 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Home</title>
+        <title>Bookzon</title>
 
         <!-- Dependencias Externas -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.2/css/star-rating.min.css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
@@ -18,6 +19,7 @@
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="src/script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.2/js/star-rating.min.js"></script>
 
         <!-- Cities -->
         <script src="src/modules/cities/cities.mod.js" type="text/javascript"></script>
@@ -26,6 +28,8 @@
         <!-- Libros -->
         <script src="src/modules/libros/libros.mod.js" type="text/javascript"></script>
         <script src="src/modules/libros/libros.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/libros/libros.detail.ctrl.js" type="text/javascript"></script>
+
 
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script>
