--- a/documentos-web/src/main/webapp/src/modules/libros/libros.list.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/libros.list.html
@@ -8,8 +8,8 @@
             <div class="col-md-3" style="margin-bottom: 100px;">
                 <div class = "w3-card w3-hover-shadow" style="width:70%">
                     <img class="center-cropped" ng-src="{{libro.caratula}}" alt="text" style="width:100%">
-                    <div class ="w3-container w3-center w3-light-gray">
-                        <button class="w3-button" style="font-size: 18px; padding-top: 10%"><span><i class="fas fa-eye" style="font-size: 24px; "></i></span> Ver Más</button>
+                    <div class ="w3-container w3-center w3-light-gray caja">
+                        <button class="w3-button" ui-sref="libroDetail({libroId: libro.id})" style="font-size: 18px; padding-top: 10%"><span><i class="fas fa-eye" style="font-size: 24px; "></i></span> Ver Más</button>
                         <h2 style="font-family: 'Roboto', sans-serif; font-size: 30px; padding-bottom: 10%"><strong>${{libro.precio}}</strong></h2>
                         <h2 class="limitar"><small>{{libro.nombre}}</small></h2>                   
                     </div>
