--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -5,14 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Bookzon</title>
+        <title>Home</title>
 
         <!-- Dependencias Externas -->
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
         <link rel="stylesheet" type= "text/css" href="src/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -26,8 +25,6 @@
         <!-- Libros -->
         <script src="src/modules/libros/libros.mod.js" type="text/javascript"></script>
         <script src="src/modules/libros/libros.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/libros/libros.detail.ctrl.js" type="text/javascript"></script>
-
 
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script>
