--- a/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<div class="container-fluid" > 
+    <div id="info" >
+        <dl> 
+            <dt>Nombre</dt>  <dd>{{currentUsuario.nombre}}</dd>
+            <hr>
+            <dt>Nombre de usuario</dt>
+            <dd>{{currentUsuario.nombreUsuario}}</dd>
+            <hr>
+            <dt>Correo</dt>
+            <dd>{{currentUsuario.correo}}</dd>
+            <hr>
+            <dt>Edad</dt>
+            <dd>{{currentUsuario.edad}}</dd>
+            <hr>
+            <dt>Genero</dt>
+            <dd>{{currentUsuario.genero}}</dd>
+            <hr>
+            <dt>correo</dt>
+            <dd>{{currentUsuario.correo}}</dd>
+
+        </dl>
+
+    </div>
+</div>
+
