--- a/documentos-web/src/main/webapp/src/modules/Editoriales/editoriales-list.html
+++ b/documentos-web/src/main/webapp/src/modules/Editoriales/editoriales-list.html
@@ -17,7 +17,7 @@
                         </a>
                     </h4>
                 </div>
-                <div id="collapse{{$index}}" class="panel-collapse collapse in">
+                <div id="collapse{{$index}}" class="panel-collapse collapse">
                     <div class="panel-body">
                         <strong>Id:</strong>{{editorial.id}}
                         <br>
