Avance en los requerimientos CU_E_001 Y CU_E_002

--- a/documentos-web/src/main/webapp/src/modules/Editoriales/editoriales-list.html
+++ b/documentos-web/src/main/webapp/src/modules/Editoriales/editoriales-list.html
@@ -1,4 +1,11 @@
-
+<div  id="CursoDiv2" class="container-fluid"   >    
+    
+        <div class="container" style="padding-top:50px " > 
+            <h1 style="letter-spacing:5px ">Editoriales:</h1>
+            
+        </div>
+  
+</div>
 
 
 <div style="padding-top:150px" class ="container">
