--- a/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
@@ -5,9 +5,9 @@
         </div>
         <div class="panel-body">
             <div class="col-md-1">
-                <ul ng-repeat="imagen in currentLibro.imagenes">
-                    <li>
-                        <img ng-src="{{imagen.img}}" alt="imagen" style="height: 50%; width: 50%">
+                <ul class="list-group" ng-repeat="imagen in currentLibro.imagenes">
+                    <li  style="padding-right: 10%; padding-bottom: 10%; list-style-type: none;">
+                        <img ng-src="{{imagen.img}}" alt="imagen" style="position: relative; float: left; width:  100px; height: 100px; background-position: 50% 50%; background-repeat:   no-repeat;background-size:cover; padding-right: 10%; padding-bottom: 10%">
                     </li>
                 </ul>
             </div>
@@ -17,7 +17,7 @@
             <div class="col-md-5">
                 <h2 style="font-family: 'Roboto', sans-serif; font-size: 55px">{{currentLibro.nombre}}</h2>
                 <h2 class=w3-text-green style="font-family: 'Roboto', sans-serif; font-size: 50px">${{currentLibro.precio}}</h2>
-                <h3 style="font-family: 'Roboto', sans-serif">Escrito por: <a ng-repeat="autor in currentLibro.autores">{{autor.nombre}}</a></h3> 
+                <h3 style="font-family: 'Roboto', sans-serif">Escrito por: <a ng-repeat="autor in currentLibro.autores">{{autor.nombre}},</a></h3> 
                 <h3 style="font-family: 'Roboto', sans-serif">Descripción:</h3>
                 <h4 style="font-family: 'Roboto', sans-serif">{{currentLibro.descripcion}}</h4>
                 <h3 style="font-family: 'Roboto', sans-serif">Fecha de publicación: {{currentLibro.fechaPublicacion |date:format :timezone}}</h3>
