--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -28,6 +28,19 @@
         <script src="src/modules/libros/libros.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/libros/libros.detail.ctrl.js" type="text/javascript"></script>
 
+        <!-- usuarios -->
+        <script src="src/modules/usuarios/usuarios.mod.js" type="text/javascript"></script>
+        <script src="src/modules/usuarios/usuarios.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuarios/usuarios.detail.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/usuarios/new/usuarios.new.ctrl.js" type="text/javascript"></script>
+        
+        <!-- reservas -->
+        <script src="src/modules/reservas/reservas.mod.js" type="text/javascript"></script>
+        <script src="src/modules/reservas/reservas.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/reservas/reservas.detail.ctrl.js" type="text/javascript"></script>
+        
+
+
 
         <script src="src/app.js" type="text/javascript"></script> 
         <script src="src/http-interceptor.factory.js" type="text/javascript"></script>
@@ -79,8 +92,10 @@
 
 
                             <li><a href="#"> Sign in</a></li>
-                            <li><a data-toggle="modal" href="#myModal" href="#"> Register</a></li>
+                            <li><a data-toggle="modal" href="#myModal" href="#"  ui-sref="usuarioCreate"> Register</a></li>
                             <li> <a href="#"><i class="fas fa-shopping-cart"></i> Shoping Cart</a> </li>
+                            <li> <a ui-sref="usuariosList" id="usuarios"> Usuarios</a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -113,8 +128,8 @@
         <--! Aqui se van a ver las cosas-->
         <div class="span4" id="navego" ui-view="mainView"></div> 
         <div class ="Intro" >
-                <h1>Bienvenidos a Bookzon</h1>
-                <center><hr></center>
+            <h1>Bienvenidos a Bookzon</h1>
+            <center><hr></center>
         </div>
 
     </div>
