Avance en los requerimientos CU_E_005
Finalizacion del CU_E_004

--- a/documentos-web/src/main/webapp/src/modules/cursos/cursos-list.html
+++ b/documentos-web/src/main/webapp/src/modules/cursos/cursos-list.html
@@ -1,7 +1,7 @@
 <div  id="CursoDiv" class="container-fluid"   >    
     
         <div class="container" style="padding-top:50px " > 
-            <h1 style="letter-spacing:5px ">Cursos:</h1>
+            <h1 style="letter-spacing:5px ">Cursos</h1>
             
         </div>
   
