--- a/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.html
@@ -1,4 +1,6 @@
 <div class="container-fluid" >
+        <div ui-view="reservas"></div>
     <div ui-view="listView"> </div>
-    <div ui-view="detailView"></div>
+    <div ui-view="detailView"></div>  
+
 </div>
