--- a/documentos-web/src/main/webapp/src/modules/tarjetadecredito/new/tarjetadecredito.new.html
+++ b/documentos-web/src/main/webapp/src/modules/tarjetadecredito/new/tarjetadecredito.new.html
@@ -1,5 +1,3 @@
-
-!-- Modal -->
 <div id="modalTDC" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
@@ -18,30 +16,31 @@
                 <form name="tarjetadecredito">
                     <div class="form-group">
                         <label for="tipoDeTarjeta">Tipo de Tarjeta</label>
-                        <select class="form-control" id="tipoDeTarjeta">
+                        <select class="form-control" id="tipoDeTarjeta" required ng-model="data.tipoDeTarjeta">
                             <option>Visa</option>
                             <option>MasterCard</option>
                         </select>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-12">
-                            <label for="nroEnLaTarjeta" class="col-sm-2">Numero de la tarjeta</label>
-                            <input id="usuario" required ng-model="data.usuario" class="col-sm-6"/>
+                            <label for="nroDeLaTarjeta" class="col-sm-2">Numero de la tarjeta</label>
+                            <input id="nroDeLaTarjeta" required ng-model="data.nroDeLaTarjeta" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-12">
-                            <label for="nroDeSeguridad" class="col-sm-2">Codigo de seguridad</label>
-                            <input id="usuario" required ng-model="data.usuario" class="col-sm-6"/>
+                            <label for="numeroDeSeguridad" class="col-sm-2">Codigo de seguridad</label>
+                            <input id="nroDeSeguridad" required ng-model="data.numeroDeSeguridad" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-12">
                             <label for="nombreEnLaTarjeta" class="col-sm-2">Nombre en la tarjeta</label>
-                            <input id="usuario" required ng-model="data.usuario" class="col-sm-6"/>
+                            <input id="nombreEnLaTarjeta" required ng-model="data.nombreEnLaTarjeta" class="col-sm-6"/>
                         </div>
                     </div>
                     <move-lists ng-if="edit" selected="selectedItems" available="availableItems"></move-lists>
+                    
 
                     <div class="form-group row">
                         <div class="form-group col-sm-4" ng-if="!tarjetadecredito.$valid">
@@ -50,7 +49,13 @@
                                 <strong>Warning!</strong><p>All inputs are required*</p>
                             </div> 
                         </div> 
-                    </div> 
+                    </div>
+                     <div class="form-group row">
+                        <div class="form-group col-sm-12">
+                            <input ng-show="tarjetadecredito.$valid" ng-click="createTarjetadecredito()" value="Save" class="btn btn-success"/>
+                            <a class="btn btn-info" ui-sref="tarjetadecreditoList">Cancel</a>
+                        </div>
+                    </div>
                 </form>
 
             </div>
