--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -75,11 +75,13 @@
                            <li><a ui-sref="librosList" class="navBusqueda">Libros</a></li>
                             <li><a ui-sref="editoriales" class="navBusqueda">Editorial</a></li>
                             <li><a ui-sref="tarjetadecreditoCreate" class="navBusqueda">TDC(Create)</a></li>   
-                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" href="#modalTDC">Open Modal</button>
+                            <button type="button" class="btn btn-info btn-md" data-toggle="modal" href="#modalTDC">Open Modal</button>
+                            <button type="button" class="btn btn-info btn-md" data-toggle="modal" href="#modalPayPal">Open Modal</button>
+                            <li><a ui-sref="paypalCreate" class="navBusqueda">PP</a></li>
                             <li><a ui-sref="cursos" class="navBusqueda">Cursos</a></li>
                        </ul>
                            <ul class="nav  navbar-nav navbar-right">        
-                               <li><a data-toggle="modal" href="#myModal">Sign in</a></li>
+                               <li><a data-toggle="modal" ui-sref="#myModal">Sign in</a></li>
                                <li> <a href="#"><i class="fas fa-shopping-cart"></i> Shoping Cart</a> </li>
                            </ul>
                        </div>
