--- a/documentos-web/src/main/webapp/src/modules/paypal/new/paypal.new.html
+++ b/documentos-web/src/main/webapp/src/modules/paypal/new/paypal.new.html
@@ -1,47 +1,59 @@
-<div class="container-fluid">
+<div id="modalPayPal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Crear cuenta PayPal</h4>
+      </div>
+      <div class="modal-body">
+          <div class="container-fluid">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createPaypal">Create new PayPal</label>
                 <label ng-if="edit" id="editPaypal">Edit PayPal</label></div>
             <div class="panel-body">
                 <form name="paypal">
                     <div class="form-group row">
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-12">
                             <label for="correoElectronico">Email address</label>
-                            <input type="email" required ng-model="data.correoelectronico" class="form-control" id="correoElectronico" placeholder="name@example.com"/>
+                            <input type="email" required ng-model="data.correoElectronico" class="form-control" id="correoElectronico" placeholder="name@example.com"/>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="usuario" class="col-sm-2">Usuario:</label>
+                            <label for="usuario" class="col-sm-12">Usuario:</label>
                             <input id="usuario" required ng-model="data.usuario" class="col-sm-6"/>
                         </div>
                     </div>
                     <move-lists ng-if="edit" selected="selectedItems" available="availableItems"></move-lists>
 
                     <div class="form-group row">
-                        <div class="form-group col-sm-4" ng-if="!paypal.$valid">
+                        <div class="form-group col-sm-12" ng-if="!paypal.$valid">
 
                             <div class="alert alert-warning" >
                                 <strong>Warning!</strong><p>All inputs are required*</p>
                             </div> 
                         </div> 
                     </div> 
+                 <div class="form-group row">
+                        <div class="form-group col-sm-12">
+                            <input ng-show="paypal.$valid" ng-click="createPaypal()" value="Save" class="btn btn-success"/>
+                            <a class="btn btn-info" ui-sref="paypalList">Cancel</a>
+                        </div>
+                    </div>
                 </form>
 
             </div>
         </div>
     </div>
-    <div class="center-block well text-center" ng-if="isAuthenticated() && !hasPermissions()">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12">
-                    <h1 class="float-left display-3 mr-4">403 Forbidden</h1>
-                    <h4 >You do not have permission for this action.</h4>
-                    <p >Contact the administrator to obtain permission.</p>
-                </div>
-            </div>
-        </div>
 </div>
 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
 
