--- a/documentos-web/src/main/webapp/src/modules/compras/new/compras.new.html
+++ b/documentos-web/src/main/webapp/src/modules/compras/new/compras.new.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" >
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createCompra">Create new Compra</label>
@@ -13,6 +13,13 @@
                             <option>Parcial</option>
                         </select>
                     </div>
+                    <div class="form-group">
+                        <label for="metodoDePago">Metodo De Pago</label>
+                        <select class="form-control" id="tipoDeTarjeta">
+                            <option>Efectivo</option>
+                            <option>Parcial</option>
+                        </select>
+                    </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="costo" class="col-sm-2">Costo. </label>
@@ -22,7 +29,7 @@
                     <div class="form-group row">
                         <div class="form-group col-md-6">
                             <label for="fecha" class="col-sm-2">Fecha </label>
-                            <input id="usuario" class="form-control"  type="text" placeholder="{{fechaTiempo()}}" readonly>
+                            <input id="usuario" class="form-control"  type="text" placeholder="data.{{fechaTiempo()}}" readonly>
                         </div>
                     </div>
                     <move-lists ng-if="edit" selected="selectedItems" available="availableItems"></move-lists>
@@ -54,48 +61,3 @@
 </div>
 
 
-<script>
-    function checkTime(i) {
-  if (i < 10) {
-    i = "0" + i;
-  }
-  return i;
-}
-
-function startTime() {
-  var today = new Date();
-  var h = today.getHours();
-  var m = today.getMinutes();
-  var s = today.getSeconds();
-  // add a zero in front of numbers<10
-  m = checkTime(m);
-  s = checkTime(s);
-  document.getElementById('time').innerHTML = h + ":" + m + ":" + s;
-  t = setTimeout(function() {
-    startTime()
-  }, 500);
-}
-
-function fecha(){
-var today = new Date();
-var dd = today.getDate();
-var mm = today.getMonth()+1; //January is 0!
-var yyyy = today.getFullYear();
-
-if(dd<10) {
-    dd = '0'+dd;
-} 
-
-if(mm<10) {
-    mm = '0'+mm;
-} 
-
-today = yyyy + '/' + mm + '/' + dd;
-return today;
-}
-
-function fechatiempo()
-{
-    return fecha() + startTime();
-}
-</script>
