--- a/documentos-web/src/main/webapp/src/modules/deseados/deseados.list.html
+++ b/documentos-web/src/main/webapp/src/modules/deseados/deseados.list.html
@@ -12,10 +12,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="reserva in reservasRecords">
-                    <td id="id">{{reserva.id}}</td>
-                    <td id="nombre">{{reserva.fecha}}</td>
-                    <td id="UserName">{{reserva.costo}}</td>
+                <tr ng-repeat="deseado in deseadosRecords">
+                    <td id="id">{{deseado.id}}</td>
+                    <td id="nombre">{{deseado.fecha}}</td>
+                    <td id="UserName">{{deseado.costo}}</td>
                     <td><button id="botonFede" ui-sref="usuarioDetail({usuarioId: usuario.id})">ver</button> </td>
                     <td><button id="botonFede" ui-sref="usuarioDetail({usuarioId: usuario.id})">Eliminar</button> </td>
 
