--- a/documentos-web/src/main/webapp/src/modules/compras/new/compras.new.html
+++ b/documentos-web/src/main/webapp/src/modules/compras/new/compras.new.html
@@ -1,11 +1,17 @@
-<div class="container-fluid" >
+<div class="container-fluid" id="panelAlgo">
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createCompra">Create new Compra</label>
                 <label ng-if="edit" id="editCompra">Edit Compra</label></div>
-            <div class="panel-body">
+            <div class="panel-body" id="fondoCompra">
                 <form name="compra">
                     
+                    <div class="form-group">
+                        <label for="libros">Libros</label>
+                        <select class="form-control"  ng-model="data.documentos" ng-options="libro.nombre for libro in Libros">
+                         
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label for="tipoDecompra">Metodo De Pago</label>
                         <select class="form-control" id="tipoDecompra" ng-model="data.tipoDecompra">
