--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -30,6 +30,10 @@
        <script src="src/modules/libros/update/libros.update.ctrl.js" type="text/javascript"></script>
        <script src="src/modules/libros/create/libros.create.ctrl.js" type="text/javascript"></script>
       
+       <!-- Fotocopias-->
+       <script src="src/modules/fotocopias/fotocopias.mod.js" type="text/javascript"></script>
+
+      
        <!----Editoriales ---->
        <script src="src/modules/Editoriales/editoriales.mod.js" type="text/javascript"></script>
        <script src="src/modules/Editoriales/editoriales.ctrl.js" type="text/javascript"></script>
