--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -86,8 +86,9 @@
                             <li><a ui-sref="editoriales" class="navBusqueda">Editorial</a></li>
                             <button type="button" class="btn btn-info btn-md" data-toggle="modal" href="#modalTDC">Open Modal</button>
                             <button type="button" class="btn btn-info btn-md" data-toggle="modal" href="#modalCompra">Open Compra</button>
-                            <button type="button" class="btn btn-info btn-md" data-toggle="modal" href="#modalPayPal">Open Modal</button>
                             <li><a ui-sref="comprasCreate" class="navBusqueda">Compra</a></li>                            
+                             <li><a ui-sref="tarjetadecreditoList" class="navBusqueda">TDC</a></li>
+
                        </ul>
                            <ul class="nav  navbar-nav navbar-right">        
                                <li><a data-toggle="modal" ui-sref="#myModal">Sign in</a></li>
