Mejora formularios en lisa-editoriales.html y lista-cursos.html

--- a/documentos-web/src/main/webapp/src/modules/cursos/cursos-list.html
+++ b/documentos-web/src/main/webapp/src/modules/cursos/cursos-list.html
@@ -94,7 +94,7 @@
                                                     </ul>         
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn loginbutton " data-dismiss="modal" style="color:white" ng-click="actualizarLibros(editorial)"> Aceptar</button>
+                                                    <button type="button" class="btn loginbutton " data-dismiss="modal" style="color:white" ng-click="actualizarLibros(curso)"> Aceptar</button>
                                                 </div>
                                             </div>
                                         </div>
