--- a/documentos-web/src/main/webapp/src/modules/libros/create/libros.new.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/create/libros.new.html
@@ -32,12 +32,6 @@
                     <label for="Fecha">Fecha de publicación:</label>
                     <input type="date" class="form-control"  id="fecha" required ng-model="data.fechaPublicacion">
                 </div>
-                <div class="form-group">
-                    <label for="Asociar Autor">Seleccionar Autor (es):</label>
-                    <select ng-click="obtenerAutor()" ng-model="data.id" ng-options="autor.id as autor.nombre  for autor in autoresRecords"  multiple class="form-control" id="Asociar Autor" >
-                        
-                    </select>
-                </div>
                 <div class="form-group row">
                     <div class="form-group col-sm-12">
                         <input  ng-click="createLibro()" value="Save" class="w3-btn w3-green"/>
@@ -49,9 +43,52 @@
         <div class="col-md-1">    
         </div>
         <div class="col-md-4">
-            <form>
+            <h2></h2>
+            <button type="button" class="w3-btn w3-blue" data-toggle="modal" data-target="#modalAutores">Asociar Autores</button>
+            <h2></h2>
+            <button type="button" class="w3-btn w3-blue" data-toggle="modal" data-target="#modalAreas">Asociar Areas de conocimiento</button>
+            <div id="modalAutores" class="modal fade" role="dialog">
+                <div class="modal-dialog">
 
-            </form>
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="cerrar" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Escoja Autores</h4>
+                        </div>
+                        <div class="modal-body">
+                            <ul class ="list-group" ng-repeat="autor in autoresRecords">
+                                <li class ="list-group-item">{{autor.nombre}}<span class="close pull-right" ng-click="asociarAutor(autor.id)" ><i class="fas fa-plus-square" style="font-size: 24px; color:green;"></i></span></li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div id="modalAreas" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="cerrar" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Escoja Autores</h4>
+                        </div>
+                        <div class="modal-body">
+                            <ul class ="list-group" ng-repeat="area in areasRecords">
+                                <li class ="list-group-item">{{area.tipo}}<span class="close pull-right" ng-click="asociarArea(area.id)" ><i class="fas fa-plus-square" style="font-size: 24px; color:green;"></i></span></li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
         </div>
         <div class="col-md-1">
