depuración de bugs

--- a/documentos-web/src/main/webapp/src/modules/deseados/deseados.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/deseados/deseados.detail.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+
+
+    <div  class="presentacion" style="margin-left:25%;padding:1px 16px;height:1000px;" >
+
+        <div class="infoUser"  >
+            <dl> 
+                <dt>i</dt>  <dd>{{currentDeseado.nombre}}</dd>
+                <hr>
+                <dt>identificador</dt>
+                <dd>{{currentDeseado.id}}</dd>
+                <hr>
+                <dt>costo</dt>
+                <dd>{{currentDeseado.costo}}</dd>
+                <hr>
+                <dt>fecha</dt>
+                <dd>{{currentDeseado.fecha}}</dd>
+                <hr>
+                <button>Actualizar información </button>  
+                <button ui-sref="deseadosList">volver a la lista de Deseados</button>
+
+
+            </dl>
