--- a/documentos-web/src/main/webapp/src/modules/usuarios/menu.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/menu.html
@@ -12,7 +12,7 @@
                         <a class ="linkUser" ui-sref="reservasList({usuarioId: currentUsuario.id})" >Reservas</a></li>
 
                     <li class="menuUser"> 
-                        <a class ="linkUser" ui-sref="deseosList">lista de deseos</a></li>
+                        <a class ="linkUser" ui-sref="deseadosList">lista de deseos</a></li>
 
                     <li class="menuUser">
                         <a class ="linkUser" ui-sref="comprasList">Compras</a></li>
