--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -61,7 +61,7 @@
         <script src="src/modules/Editoriales/editoriales.mod.js" type="text/javascript"></script>
         <script src="src/modules/Editoriales/editoriales.ctrl.js" type="text/javascript"></script>
             
-       <--Cursos-->     
+       <!--Cursos-->     
         <script src="src/modules/cursos/cursos.mod.js" type="text/javascript"></script>
         <script src="src/modules/cursos/cursos.ctrl.js" type="text/javascript"></script>
             
