Se terminan los casos CU_A_001, CU_A_002, CU_AC_001, CU_AC_002, CU_A_003, CU_A_004, CU_AC_003, CU_AC_004, . Se realizan avances en los casos CU_A_005, CU_AC_005

--- a/documentos-web/src/main/webapp/src/modules/areas/delete/areas.delete.html
+++ b/documentos-web/src/main/webapp/src/modules/areas/delete/areas.delete.html
@@ -1,4 +1,4 @@
-
+<div class="container-fluid" >
 <!-- Modal -->
 <div id="deleteAutor" class="modal fade" role="dialog">
   <div class="modal-dialog">
@@ -14,9 +14,10 @@
       </div>
       <div class="modal-footer">
         <button id="confirm-delete" ng-click="deleteArea()" class="btn btn-danger" type="button" >Delete</button>
-        <a id="cancel-delete" ui-sref="autoresList" type="button" class="btn btn-link" data-dismiss="modal">Cancelar</button>
+        <a id="cancel-delete" ui-sref="autoresList" type="button" class="btn btn-link" data-dismiss="modal">Cancelar</button></a>
       </div>
     </div>
 
   </div>
+</div>
 </div>
