--- a/documentos-web/src/main/webapp/src/modules/autores/new/autores.new.html
+++ b/documentos-web/src/main/webapp/src/modules/autores/new/autores.new.html
@@ -8,6 +8,10 @@
                 <form name="autor">
                     <div class="form-group row">
                         <div class="form-group col-md-6">
+                        
+                            <label for="autorId" class="col-sm-2">Id:</label>
+                            <input id="autorId" required ng-model="data.id" class="col-sm-6"/>
+                            
                             <label for="autorNombre" class="col-sm-2">Nombre:</label>
                             <input id="autorNombre" required ng-model="data.nombre" class="col-sm-6"/>
                         </div>
