--- a/documentos-web/src/main/webapp/src/modules/areas/areas.list.html
+++ b/documentos-web/src/main/webapp/src/modules/areas/areas.list.html
@@ -16,12 +16,14 @@
                         {{area.tipo}}
                     </a>
                 </h4>
-                <button class="w3-button" ui-sref="areaDetail({areaId: area.id})" style="font-size: 18px; padding-top: 10%"><span><i class="fas fa-eye" style="font-size: 24px; "></i></span> Ver Más</button>
+                <div align="right">
+                    <a id="{{$index}}-new" class="btn btn-info" ui-sref="areaDetail({areaId: area.id})">Ver Mas</span></a>
+                </div>
             </div>
             <div id="collapse{{$index}}" class="panel-collapse collapse in">
                 <div class="panel-body">
                     <h3>
-                    <strong>Nombre: </strong>{{area.nombre}}
+                    <strong>Tipo: </strong>{{area.tipo}}
                     <br></h3>
                     <strong>Documentos: </strong>
                     <div class="panel panel-body" style="background-color: #FCFCFC">
@@ -44,6 +46,6 @@
 </div>
 <div class="panel-footer">    
     <div class="panel panel-heading" style="background-color: #ECECEC">
-        <h1 class="finalAutores">Ya no hay mas áreas publicados</h1>
+        <h1 class="finalAutores">Ya no hay mas áreas publicadas</h1>
     </div>
 </div>
