--- a/documentos-web/src/main/webapp/src/modules/compras/compras.list.html
+++ b/documentos-web/src/main/webapp/src/modules/compras/compras.list.html
@@ -3,7 +3,7 @@
         <img  src="https://images.pexels.com/photos/50987/money-card-business-credit-card-50987.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt ="banner" style="width:100%" >
     </div>
     <div>
-        <a ui-sref="compraCreate" class="btn-lg btn-success" role="button">Adicionar</a>
+        <a ui-sref="comprasCreate" class="btn-lg btn-success" role="button">Adicionar</a>
     </div>
     <div ng-repeat="compra in comprasRecords">
 	<div class="panel panel-default" style="background-color: BLACK">
