Se agregaro essilos css a las clases de autores y areas de concimiento , falta cambiar el css de libros y fotocopias

--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -133,7 +133,7 @@
                            <span class="icon-bar"></span>
                            <span class="icon-bar"></span>
                        </button>
-                       <a class="navbar-brand" href="index.html" id="principal"> <span> <i class="fas fa-book"></i></span>  Bookzon</a>
+                       <a class="navbar-brand active" ui-sref="inicio" id="principal"> <span> <i class="fas fa-book"></i></span>  Bookzon</a>
                    </div>
                    <div class="collapse navbar-collapse" id="koofe">
                        <ul class="nav navbar-nav">
@@ -149,7 +149,7 @@
                        </ul>
                            <ul class="nav  navbar-nav navbar-right">        
                                <li><a data-toggle="modal" href="#myModal">Sign in</a></li>
-                               <li><a ui-sref="usuarioCreate" class="navBusqueda">Register</a></li>
+                               
 
                                <li> <a href="#"><i class="fas fa-shopping-cart"></i> Shoping Cart</a> </li>
                            </ul>
@@ -195,7 +195,7 @@
                                <a href="#" class="btn btn-lg btn-primary loginbutton" ><span><i class="fas fa-sign-in-alt"></i></span> Login</a>
                            </div>
                            <div class="col-xs-6">
-                               <a href="#" class="btn btn-link btn-lg">Register</a>
+                               <a ui-sref="usuarioCreate" class="btn btn-link btn-lg">Register</a>
                            </div>    
                        </div>
                    </div>
