--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -15,7 +15,7 @@
        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
        <link rel="stylesheet" type= "text/css" href="src/style.css">
-       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
        <script src="bower_components/angular/angular.js"></script>
        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
        <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -48,6 +48,7 @@
 
        <script src="src/modules/libros/libros.ctrl.js" type="text/javascript"></script>
        <script src="src/modules/libros/libros.detail.ctrl.js" type="text/javascript"></script>
+       
        <script src="src/modules/libros/update/libros.update.ctrl.js" type="text/javascript"></script>
        <script src="src/modules/libros/create/libros.create.ctrl.js" type="text/javascript"></script>
 
