Cambios finales en lista de libros y fotocopias
Se comenzra a embellecer listas de autores y areas de conocimiento

--- a/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
@@ -4,6 +4,7 @@
 
         </div>
         <div class="panel-body">
+            <button ng-click="hola(currentLibro)"> algo</button>
             <div class="col-md-1">
                 <ul class="list-group" ng-repeat="imagen in currentLibro.imagenes">
                     <li  style="padding-right: 10%; padding-bottom: 10%; list-style-type: none;">
