Carrito de compras incoroporado

--- a/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
@@ -16,7 +16,7 @@
                 
                   <button class="btn btn-primary pull-right" type="button" style="width: 80px;
 height: 80px;
-border-radius: 50%; margin-top: 27%; margin-right:50px; background-color: #2c3e50"><i class="fas fa-shopping-cart" style="font-size: 20px;"></i> </button>
+border-radius: 50%; margin-top: 27%; margin-right:50px; background-color: #2c3e50" ng-click="agregar(currentLibro)" ><i class="fas fa-shopping-cart" style="font-size: 20px;"></i> </button>
                     <div style=" border-bottom-style: dotted; border-color: #d9dcdd">
                         
                         <p style="font-weight:100; font-size: 13px;"> {{currentLibro.comentarios.length}} comentarios <span class="pull-right">  
