--- a/documentos-web/src/main/webapp/src/modules/Editoriales/editoriales-list.html
+++ b/documentos-web/src/main/webapp/src/modules/Editoriales/editoriales-list.html
@@ -109,7 +109,7 @@
         <div class="container ">
             <div class="col-md-5">
                 <div class="form-area">  
-                    <form role="form">
+                    <form role="form" name="sotelito">
                         <br>
                         <h3>Controles</h3>
                         <br>
