--- a/documentos-web/src/main/webapp/src/modules/libros/libros.list.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/libros.list.html
@@ -57,7 +57,7 @@
                     <img  ng-src="{{libro.caratula}}"  class="imageLibro" alt="text" style="width:100%; height:40%; ">
                     
                       <div class="middleLibro">
-                          <a ui-sref="libroDetail({libroId: libro.id})" style="font-size: 18px; padding-top: 10%;" class="hoverDeLibroIcono"><span><i class="fas fa-eye" style="font-size: 24px; "></i></span> Ver Más <br> {{libro.precio|currency:"COP$":0}}</a>
+                          <a ui-sref="libroDetail({libroId: libro.id})" style="font-size: 18px; padding-top: 10%;" class="hoverDeLibroIcono"><span><i class="fas fa-eye" style="font-size: 24px; "></i></span> Ver Más <br> {{libro.precio|currency:"":0}}</a>
                           
                       </div>
                     <div class="b">
