detailed de fotocopia y libro acabado

--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -163,7 +163,7 @@
                                <li><a data-toggle="modal" href="#myModal">Sign in</a></li>
                                
 
-                               <li> <a ui-sref="carrito"> <i class="fas fa-shopping-cart"></i> Shoping Cart</a> </li>
+                               <li> <a ui-sref="carrito"> <i class="fas fa-shopping-cart"></i> Shoping Cart ({{carrito.length}})</a> </li>
                            </ul>
                        </div>
                            
