Delete implementado de libros

--- a/documentos-web/src/main/webapp/src/modules/carrito/carrito-list.html
+++ b/documentos-web/src/main/webapp/src/modules/carrito/carrito-list.html
@@ -17,7 +17,7 @@
                     <thead>
                         <tr>
                             <th>Producto</th>
-                            <th>#</th>
+                            <th>Cantidad</th>
                             <th class="text-center">Precio</th>
                         </tr>
                     </thead>
@@ -33,14 +33,14 @@
                         <tr>
                             <td>   </td>
                             <td class="text-right"><h4><strong>Total:</strong></h4></td>
-                            <td class="text-center text-danger"><h4><strong> </strong></h4>${{total()}}</td>
+                            <td class="text-center"><h4><strong> </strong></h4>${{total()}}</td>
                              
                             <td>   </td>
                         </tr>
                        
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-success btn-lg btn-block">
+                <button type="button" class="btn loginbutton btn-lg btn-block" style="color:white">
                     Pay Now   <span class="glyphicon glyphicon-chevron-right"></span>
                 </button>
             </div>
