--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -32,6 +32,8 @@
         <script src="src/modules/usuarios/usuarios.mod.js" type="text/javascript"></script>
         <script src="src/modules/usuarios/usuarios.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/usuarios/usuarios.detail.ctrl.js" type="text/javascript"></script>
+                <script src="src/modules/usuarios/new/usuarios.new.ctrl.js" type="text/javascript"></script>
+
         
          <!-- reservas -->
         <script src="src/modules/reservas/reservas.mod.js" type="text/javascript"></script>
