--- a/documentos-web/src/main/webapp/src/modules/reservas/reservas.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/reservas/reservas.detail.html
@@ -1,16 +1,16 @@
 
 
-    <div  class="presentacion" style="margin-left:25%;padding:1px 16px;height:1000px;" >
+    <div  class="presentacion" style="margin-left:25%;padding:1px 16px;height:1000px;"  >
 
         <div class="infoUser"  >
             <dl> 
-                <dt>i</dt>  <dd>{{currentReserva.nombre}}</dd>
+                <dt></dt>  <dd>Reserva</dd>
                 <hr>
                 <dt>identificador</dt>
-                <dd>{{currentreserva.id}}</dd>
+                <dd><p>{{currentReserva.id}}</p></dd>
                 <hr>
                 <dt>costo</dt>
-                <dd>{{currentReserva.costo}}</dd>
+                <dd><p>${{currentReserva.costo}}</p></dd>
                 <hr>
                 <dt>fecha</dt>
                 <dd>{{currentReserva.fecha}}</dd>
