--- a/documentos-web/src/main/webapp/src/modules/usuarios/menu.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/menu.html
@@ -18,7 +18,7 @@
                         <a class ="linkUser" ui-sref="comprasList">Compras</a></li>
 
                     <li class="menuUser">
-                        <a class ="linkUser" ui-sref="tarjetadecreditoList">Targetas de credito</a></li>
+                        <a class ="linkUser" ui-sref="tarjetadecreditoList">Tarjetas de credito</a></li>
                      <li class="menuUser">
                          
                         <a class ="linkUser" ui-sref="paypalList">Paypal</a></li>
