--- a/documentos-web/src/main/webapp/src/modules/usuarios/new/usuarios.new.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/new/usuarios.new.html
@@ -14,7 +14,7 @@
     <div class="form-group row">
         <div class="form-group col-md-6">
             <label for="correo" class="col-sm-2">correo</label>
-            <textarea id="registroU" required ng-model="correo" class="col-sm-6"></textarea>
+            <input id="registroU" required ng-model="correo" class="col-sm-6"/>
         </div>
     </div>
     <div class="form-group row">
