--- a/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/libros/libros.detail.html
@@ -24,6 +24,7 @@
                 <h3 style="font-family: 'Roboto', sans-serif">Publicado por:</h3>
                 <h3 style="font-family: 'Roboto', sans-serif"><a> {{currentLibro.editorial.nombre}}</a></h3>
                 <h3 style="font-family: 'Roboto', sans-serif">ISBN: {{currentLibro.ISBN}}</h3>
+                <button ng-click="agregarLibro(currentLibro)">hola</button>
             </div>
             <div class="col-md-3">
                 <h2></h2>
