--- a/documentos-web/src/main/webapp/src/modules/reservas/reservas.list.html
+++ b/documentos-web/src/main/webapp/src/modules/reservas/reservas.list.html
@@ -2,6 +2,7 @@
 
 <div class="container-fluid" style="padding-left: 400px; margin-top: 100px; ">
         <table class="tablaListaU">
+            <button  ui-sref="reservaCreate"> Crear nueva reserva</button>
             <thead>
                 <tr>
                     <th>número de reserva</th>
