--- a/documentos-web/src/main/webapp/index.html
+++ b/documentos-web/src/main/webapp/index.html
@@ -39,7 +39,8 @@
         <script src="src/modules/reservas/reservas.mod.js" type="text/javascript"></script>
         <script src="src/modules/reservas/reservas.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/reservas/reservas.detail.ctrl.js" type="text/javascript"></script>
-        
+        <script src="src/modules/reservas/new/reservas.new.ctrl.js" type="text/javascript"></script>
+       
          <!-- deseado -->
         <script src="src/modules/deseados/deseados.mod.js" type="text/javascript"></script>
         <script src="src/modules/deseados/deseados.ctrl.js" type="text/javascript"></script>
