--- a/documentos-web/src/main/webapp/src/modules/paypal/new/paypal.new.html
+++ b/documentos-web/src/main/webapp/src/modules/paypal/new/paypal.new.html
@@ -1,5 +1,5 @@
 
-          <div class="container-fluid">
+<div class="container center-cropped" style="margin-top: 10%">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createPaypal">Create new PayPal</label>
                 <label ng-if="edit" id="editPaypal">Edit PayPal</label></div>
