--- a/documentos-web/src/main/webapp/src/modules/paypal/paypal.list.html
+++ b/documentos-web/src/main/webapp/src/modules/paypal/paypal.list.html
@@ -1,4 +1,6 @@
-<div class="container-fluid" style="background-image: url(https://images.pexels.com/photos/862734/pexels-photo-862734.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
+<div id="paypalFondo" style="margin-top:2%"> 
+    <h1>PayPal</h1> </div>
+<div class="container-fluid" style="background-color: #245269">
 <div class="container">
     <div>
         <a ui-sref="paypalCreate" class="btn-lg btn-success" role="button">Adicionar</a>
