--- a/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.list.html
+++ b/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.list.html
@@ -1,5 +1,8 @@
-<div class="container-fluid" style="background-image: url(https://images.pexels.com/photos/50987/money-card-business-credit-card-50987.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-<div class="container">
+<div id="tarjetaFondo" style="margin-top: 3%">
+    <h1>Tarjeta de credito</h1>
+</div>
+<div class="container-fluid" style="background-color:#245269 ">
+    <div class="container">
     <div>
         <a ui-sref="tarjetadecreditoCreate" class="btn-lg btn-success" role="button">Adicionar</a>
     </div>
