--- a/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.detail.html
@@ -1,16 +1,26 @@
-<div class="row" ng-repeat="tarjetadecredito in currentTarjeta" >
-    <div class="col-sm-2">
-      <i class="fa fa-credit-card" style="font-size:70px;color:white"></i>
-    </div>
-    <div class="col-sm-6">
-      <div class="row" style="color:white;background-color:rgb(0,255,255,0.2)" ><p> Nombre en la tarjeta : {{currentTarjetadecredito.nombreEnLaTarjeta}}</p></div>
-      <div class="row" style="color:white;background-color:rgb(0,0,0,0.2)" ><p> Tipo de tarjeta de credito : {{currentTarjetadecredito.tipoDeTarjeta}}</p></div>
-    <div class="row" style="color:white;background-color:rgb(0,140,255,0.2)" ><p> Numero de tarjeta de credito : {{currentTarjetadecredito.nroDeTarjeta}}</p></div>
-    </div>
-        <div class="col-sm-4">
-          <br>
-          <button type="button" class="btn btn-danger btn-md">Delete</button>
-          <button type="button" class="btn btn-warning btn-md" ui-sref="tarjetadecreditoUpdate({tarjetadecreditoId: currentTarjetadecredito.id})">View</button>
-                </div>
-            <br><br><br>
-            </div>  
+<div id="tarjetaFondo" style="margin-top: 3%">
+    <h1>Tarjeta de credito</h1>
+</div>
+<div class="container-fluid well span6 center-cropped" style="margin-top: 5%">
+	<div class="row-fluid">
+        <div class="span8">
+            <i class="fa fa-credit-card" style="font-size:200px"></i>
+            <h3>Nombre en La tarjeta : {{currentTarjetadecredito.nombreEnLaTarjeta}}</h3>
+            <h6>Tipo de tarjeta : {{currentTarjetadecredito.tipoDeTarjeta}}</h6>
+            <h6>Numero de tarjeta : {{currentTarjetadecredito.nroDeLaTarjeta}}</h6>
+        </div>
+        
+        <div class="span2">
+            <div class="btn-group">
+                <a class="btn dropdown-toggle btn-info" data-toggle="dropdown" href="#">
+                    Action 
+                    <span class="icon-cog icon-white"></span><span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a ui-sref="tarjetadecreditoUpdate"><span class="icon-wrench"></span> Modify</a></li>
+                    <li><a href="#"><span class="icon-trash"></span> Delete</a></li>
+                </ul>
+            </div>
+        </div>
+</div>
+</div>
