--- a/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.html
+++ b/documentos-web/src/main/webapp/src/modules/tarjetadecredito/tarjetadecredito.html
@@ -2,9 +2,8 @@
     <div class="row">
         
     </div>
-    <div ui-view="listView">
-
-    <div ui-view="detailView">
-
+    <div ui-view="listView">        
     </div>   
+    <div ui-view="detailView">
+    </div>
 </div>
