--- a/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.detail.html
@@ -2,7 +2,7 @@
 
 
 
-    <div  class="presentacion" style="margin-left:25%;padding:1px 16px;height:1000px;" >
+    <div  class="presentacion" style="margin-left:25%;padding:1px 16px;height:1000px" >
 
         <div class="infoUser"  >
             <dl> 
