--- a/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.html
@@ -2,5 +2,8 @@
     <div ui-view="listView"> </div>
     <div ui-view="menuView"> </div>
     <div ui-view="reservas"> </div>
+    <div ui-view="tarjetas"> </div>
+    <div ui-view="paypal"> </div>
     <div ui-view="detailView"></div>  
+    <div ui-view="facturas"> </div>    
 </div>
