--- a/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/usuarios.html
@@ -2,5 +2,7 @@
     <div ui-view="listView"> </div>
     <div ui-view="menuView"> </div>
     <div ui-view="reservas"> </div>
-    <div ui-view="detailView"></div>  
+    <div ui-view="deseados"> </div>
+    <div ui-view="detailView"></div> 
+    <div ui-view="updateView"></div> 
 </div>
