--- a/documentos-web/src/main/webapp/src/modules/usuarios/menu.html
+++ b/documentos-web/src/main/webapp/src/modules/usuarios/menu.html
@@ -2,7 +2,7 @@
     <div class="listaUsers" style="background-color: #080808">
 
         <div class="otherListaUsers" style="background-color: #FCFCFC" >
-            <nav class="menuNavUsuario">
+            <nav ng-class="personalizado" class="menuNavUsuario">
                 <ul class="menuUlUsuario" > 
 
                     <li class="menuUser"> 
@@ -12,7 +12,7 @@
                         <a class ="linkUser" ui-sref="reservasList({usuarioId: currentUsuario.id})" >Reservas</a></li>
 
                     <li class="menuUser"> 
-                        <a class ="linkUser" ui-sref="deseadosList">lista de deseos</a></li>
+                        <a class ="linkUser" ui-sref="deseadosList({usuarioId: currentUsuario.id})">lista de deseos</a></li>
 
                     <li class="menuUser">
                         <a class ="linkUser" ui-sref="comprasList">Compras</a></li>
